Ver 1.9(4) : Added GUI version for premium unlock feature.

--- a/Modacity/Modacity/ViewController/MetroDrone/metrodone.storyboard
+++ b/Modacity/Modacity/ViewController/MetroDrone/metrodone.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_0" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -385,6 +385,7 @@
                         <outlet property="constraintForHeaderImageViewHeight" destination="rcp-0U-ora" id="TKN-KN-tpG"/>
                         <outlet property="constraintForMinTrickImageWidth" destination="ffn-Bd-DQ6" id="BHU-zs-dRZ"/>
                         <outlet property="constraintForMinTrickViewWidth" destination="ahb-zR-pmd" id="MRz-Jb-SeR"/>
+                        <outlet property="imageViewHeader" destination="0q3-67-hWE" id="JOI-M4-kcA"/>
                         <outlet property="imageViewMaxTrick" destination="7Ua-Yk-I99" id="34h-Vo-uEe"/>
                         <outlet property="imageViewNoteOnButton" destination="w3B-ee-rxq" id="zSU-uz-gJN"/>
                         <outlet property="imageViewNoteStatusOnButton" destination="NPD-Sm-QFl" id="f8W-zc-sAO"/>
@@ -775,6 +776,7 @@
                         <outlet property="constraintForHeaderImageViewHeight" destination="wfs-J0-Dse" id="LGI-u3-ezU"/>
                         <outlet property="constraintForMinTrickImageWidth" destination="BHV-Xz-S4S" id="TZ2-gY-G7H"/>
                         <outlet property="constraintForMinTrickViewWidth" destination="FV8-Tg-bdx" id="gqA-ES-aou"/>
+                        <outlet property="imageViewHeader" destination="e6L-14-yeW" id="98V-lJ-mGF"/>
                         <outlet property="imageViewMaxTrick" destination="TpM-2N-WAt" id="HRh-vI-Lcs"/>
                         <outlet property="imageViewNoteOnButton" destination="bFd-0i-6ed" id="Wok-tX-PCy"/>
                         <outlet property="imageViewNoteStatusOnButton" destination="Qfh-lN-ZTx" id="4ua-vU-x3a"/>
