--- a/Modacity/Modacity/ViewController/SideMenuController/sidemenu.storyboard
+++ b/Modacity/Modacity/ViewController/SideMenuController/sidemenu.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -89,9 +89,14 @@
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bg_simple_gradient" translatesAutoresizingMaskIntoConstraints="NO" id="l5d-dB-n5y">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="707"/>
                             </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="img_badge_premium" translatesAutoresizingMaskIntoConstraints="NO" id="EWs-hb-Hfy">
+                                <rect key="frame" x="0.0" y="0.0" width="159" height="66"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="EWs-hb-Hfy" firstAttribute="top" secondItem="yeu-vo-0UB" secondAttribute="top" id="5jT-No-HEa"/>
+                            <constraint firstItem="EWs-hb-Hfy" firstAttribute="leading" secondItem="8Ts-Hg-dKB" secondAttribute="leading" id="85L-da-m7S"/>
                             <constraint firstItem="l5d-dB-n5y" firstAttribute="leading" secondItem="8Ts-Hg-dKB" secondAttribute="leading" id="8t5-HK-cTm"/>
                             <constraint firstItem="l5d-dB-n5y" firstAttribute="trailing" secondItem="8Ts-Hg-dKB" secondAttribute="trailing" id="bPt-IP-jwh"/>
                             <constraint firstItem="l5d-dB-n5y" firstAttribute="top" secondItem="yeu-vo-0UB" secondAttribute="top" id="y9l-qj-wlJ"/>
@@ -100,16 +105,18 @@
                         <viewLayoutGuide key="safeArea" id="8Ts-Hg-dKB"/>
                     </view>
                     <connections>
+                        <outlet property="imageViewPremiumBadge" destination="EWs-hb-Hfy" id="Pr8-bn-97O"/>
                         <segue destination="S9d-7s-lc1" kind="custom" identifier="left" customClass="LGSideMenuSegue" id="AYs-9r-LFD"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Cum-OH-rcu" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="225" y="139"/>
+            <point key="canvasLocation" x="224.80000000000001" y="138.98050974512745"/>
         </scene>
     </scenes>
     <resources>
         <image name="bg_simple_gradient" width="375" height="667"/>
         <image name="icon_menu_home" width="19" height="19"/>
+        <image name="img_badge_premium" width="159" height="66"/>
     </resources>
 </document>
