--- a/Modacity/Modacity/ViewController/Premium/PremiumUpgradeLockView.xib
+++ b/Modacity/Modacity/ViewController/Premium/PremiumUpgradeLockView.xib
@@ -17,6 +17,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="PremiumUpgradeLockView" customModule="Modacity" customModuleProvider="target">
             <connections>
+                <outlet property="constraintForTopSpace" destination="p9G-Oj-EIx" id="UqA-WA-zTg"/>
                 <outlet property="labelDescription" destination="IMf-St-wSo" id="Tqd-IX-qkF"/>
                 <outlet property="labelTitle" destination="mqf-nZ-VQu" id="cwy-Vp-GND"/>
                 <outlet property="viewContent" destination="mXc-6y-zp0" id="yO9-UA-euQ"/>
@@ -28,7 +29,7 @@
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ocR-MU-nDP">
-                    <rect key="frame" x="60" y="266.5" width="255" height="154.5"/>
+                    <rect key="frame" x="60" y="40" width="255" height="154.5"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Get time breakdowns, rating history &amp; more." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IMf-St-wSo">
                             <rect key="frame" x="0.0" y="61" width="255" height="14.5"/>
@@ -68,8 +69,8 @@ PRACTICE STATS</string>
             <color key="backgroundColor" white="0.0" alpha="0.75" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
                 <constraint firstItem="ocR-MU-nDP" firstAttribute="leading" secondItem="9Df-qb-l5P" secondAttribute="leading" constant="60" id="Vc0-V5-oHp"/>
-                <constraint firstItem="ocR-MU-nDP" firstAttribute="centerY" secondItem="9Df-qb-l5P" secondAttribute="centerY" id="XrX-E6-E2o"/>
                 <constraint firstItem="9Df-qb-l5P" firstAttribute="trailing" secondItem="ocR-MU-nDP" secondAttribute="trailing" constant="60" id="Y1I-oH-WKo"/>
+                <constraint firstItem="ocR-MU-nDP" firstAttribute="top" secondItem="9Df-qb-l5P" secondAttribute="top" constant="20" id="p9G-Oj-EIx"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="9Df-qb-l5P"/>
             <point key="canvasLocation" x="24.5" y="51.5"/>
