--- a/Modacity/Modacity/ViewController/Premium/PremiumUpgradeLockView.xib
+++ b/Modacity/Modacity/ViewController/Premium/PremiumUpgradeLockView.xib
@@ -21,6 +21,7 @@
                 <outlet property="labelDescription" destination="IMf-St-wSo" id="Tqd-IX-qkF"/>
                 <outlet property="labelTitle" destination="mqf-nZ-VQu" id="cwy-Vp-GND"/>
                 <outlet property="viewContent" destination="mXc-6y-zp0" id="yO9-UA-euQ"/>
+                <outlet property="viewContentPanel" destination="ocR-MU-nDP" id="tP0-xs-0h1"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -66,7 +67,7 @@ PRACTICE STATS</string>
                     </constraints>
                 </view>
             </subviews>
-            <color key="backgroundColor" white="0.0" alpha="0.75" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+            <color key="backgroundColor" white="0.0" alpha="0.55000000000000004" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
                 <constraint firstItem="ocR-MU-nDP" firstAttribute="leading" secondItem="9Df-qb-l5P" secondAttribute="leading" constant="60" id="Vc0-V5-oHp"/>
                 <constraint firstItem="9Df-qb-l5P" firstAttribute="trailing" secondItem="ocR-MU-nDP" secondAttribute="trailing" constant="60" id="Y1I-oH-WKo"/>
