--- a/Modacity/Modacity/ViewController/Notes/NoteCell.xib
+++ b/Modacity/Modacity/ViewController/Notes/NoteCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -116,6 +116,7 @@
             </tableViewCellContentView>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <connections>
+                <outlet property="constraintForCheckImageView" destination="huT-VH-XAT" id="jrE-z3-0hj"/>
                 <outlet property="imageViewChecked" destination="FcQ-cv-5W6" id="uUd-zS-WkQ"/>
                 <outlet property="labelNote" destination="Vj6-LZ-2Ym" id="RQK-oP-weq"/>
                 <outlet property="labelNoteCreated" destination="eO3-td-JeQ" id="yQg-3l-gs3"/>
