--- a/Modacity/Modacity/ViewController/Notes/NotesListView.xib
+++ b/Modacity/Modacity/ViewController/Notes/NotesListView.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -17,10 +17,14 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="NotesListView" customModule="Modacity" customModuleProvider="target">
             <connections>
+                <outlet property="labelUnlockDescription" destination="8kI-qA-fQ8" id="4AC-6s-sSq"/>
+                <outlet property="labelUnlockTitle" destination="kh0-D5-bF1" id="ITO-Dd-Xpm"/>
                 <outlet property="tableViewMain" destination="kHd-FO-nNM" id="Bso-kV-jm3"/>
                 <outlet property="textfieldAddNote" destination="dO9-c7-FLp" id="yU8-xJ-LMC"/>
                 <outlet property="viewAddNoteContainer" destination="W0Y-zx-2wA" id="5NW-vp-fY4"/>
                 <outlet property="viewContent" destination="mXc-6y-zp0" id="yO9-UA-euQ"/>
+                <outlet property="viewUnlockCover" destination="rZh-45-Bqy" id="dVl-GL-5ML"/>
+                <outlet property="viewUnlockPanel" destination="wfQ-N9-24P" id="Fx1-wA-DC5"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -74,6 +78,11 @@
                         <constraint firstAttribute="height" constant="1" id="Bd4-A3-NO1"/>
                     </constraints>
                 </view>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wfQ-N9-24P">
+                    <rect key="frame" x="0.0" y="20" width="419" height="132"/>
+                    <color key="backgroundColor" white="0.0" alpha="0.55000000000000004" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <viewLayoutGuide key="safeArea" id="ND6-QX-weo"/>
+                </view>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="kHd-FO-nNM" customClass="TPKeyboardAvoidingTableView">
                     <rect key="frame" x="0.0" y="96" width="419" height="479"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -82,18 +91,75 @@
                         <outlet property="delegate" destination="-1" id="azM-dN-bKm"/>
                     </connections>
                 </tableView>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rZh-45-Bqy">
+                    <rect key="frame" x="0.0" y="152" width="419" height="423"/>
+                    <subviews>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YLi-If-GGz">
+                            <rect key="frame" x="82" y="30" width="255" height="154.5"/>
+                            <subviews>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Get time breakdowns, rating history &amp; more." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8kI-qA-fQ8">
+                                    <rect key="frame" x="0.0" y="61" width="255" height="14.5"/>
+                                    <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="12"/>
+                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="440-Ih-Qej">
+                                    <rect key="frame" x="52" y="95.5" width="150" height="52"/>
+                                    <state key="normal" image="btn_findout_more"/>
+                                    <connections>
+                                        <action selector="onFindOutMore:" destination="-1" eventType="touchUpInside" id="jIu-Kb-Fvs"/>
+                                    </connections>
+                                </button>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kh0-D5-bF1">
+                                    <rect key="frame" x="61" y="0.0" width="133.5" height="41"/>
+                                    <string key="text">UNLOCK YOUR
+PRACTICE STATS</string>
+                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                            </subviews>
+                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <constraints>
+                                <constraint firstItem="kh0-D5-bF1" firstAttribute="top" secondItem="YLi-If-GGz" secondAttribute="top" id="0N4-XB-D34"/>
+                                <constraint firstItem="8kI-qA-fQ8" firstAttribute="top" secondItem="kh0-D5-bF1" secondAttribute="bottom" constant="20" id="4X2-94-JKo"/>
+                                <constraint firstAttribute="bottom" secondItem="440-Ih-Qej" secondAttribute="bottom" constant="7" id="5k3-Me-hUD"/>
+                                <constraint firstItem="kh0-D5-bF1" firstAttribute="centerX" secondItem="YLi-If-GGz" secondAttribute="centerX" id="8XR-iX-VS0"/>
+                                <constraint firstItem="8kI-qA-fQ8" firstAttribute="leading" secondItem="YLi-If-GGz" secondAttribute="leading" id="YII-jo-NpV"/>
+                                <constraint firstAttribute="trailing" secondItem="8kI-qA-fQ8" secondAttribute="trailing" id="Z3R-xI-ZYX"/>
+                                <constraint firstItem="440-Ih-Qej" firstAttribute="top" secondItem="8kI-qA-fQ8" secondAttribute="bottom" constant="20" id="gGo-pX-x35"/>
+                                <constraint firstItem="440-Ih-Qej" firstAttribute="centerX" secondItem="YLi-If-GGz" secondAttribute="centerX" id="v1i-Ul-o3V"/>
+                            </constraints>
+                        </view>
+                    </subviews>
+                    <color key="backgroundColor" white="0.0" alpha="0.55000000000000004" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <constraints>
+                        <constraint firstItem="pPv-ih-ECf" firstAttribute="trailing" secondItem="YLi-If-GGz" secondAttribute="trailing" constant="82" id="3pE-gY-c4P"/>
+                        <constraint firstItem="YLi-If-GGz" firstAttribute="leading" secondItem="pPv-ih-ECf" secondAttribute="leading" constant="82" id="N7M-cS-G0t"/>
+                        <constraint firstItem="YLi-If-GGz" firstAttribute="top" secondItem="pPv-ih-ECf" secondAttribute="top" constant="30" id="wBw-mD-OHP"/>
+                    </constraints>
+                    <viewLayoutGuide key="safeArea" id="pPv-ih-ECf"/>
+                </view>
             </subviews>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
                 <constraint firstItem="Jav-QH-fpE" firstAttribute="top" secondItem="W0Y-zx-2wA" secondAttribute="bottom" constant="15" id="7F8-NV-ptu"/>
+                <constraint firstItem="9Df-qb-l5P" firstAttribute="bottom" secondItem="rZh-45-Bqy" secondAttribute="bottom" id="7T8-e3-Yry"/>
                 <constraint firstItem="9Df-qb-l5P" firstAttribute="leading" secondItem="W0Y-zx-2wA" secondAttribute="leading" constant="-20" id="7vw-DN-sOg"/>
                 <constraint firstItem="Jav-QH-fpE" firstAttribute="leading" secondItem="mXc-6y-zp0" secondAttribute="leading" id="9mi-Pv-fKp"/>
                 <constraint firstItem="kHd-FO-nNM" firstAttribute="top" secondItem="Jav-QH-fpE" secondAttribute="bottom" id="C8Z-cN-DeO"/>
                 <constraint firstItem="W0Y-zx-2wA" firstAttribute="top" secondItem="9Df-qb-l5P" secondAttribute="top" constant="10" id="Ez4-tf-0XA"/>
+                <constraint firstItem="9Df-qb-l5P" firstAttribute="top" secondItem="wfQ-N9-24P" secondAttribute="top" id="GEj-Ng-L7M"/>
                 <constraint firstItem="kHd-FO-nNM" firstAttribute="trailing" secondItem="9Df-qb-l5P" secondAttribute="trailing" id="JvD-Ec-HXa"/>
+                <constraint firstItem="kHd-FO-nNM" firstAttribute="top" secondItem="wfQ-N9-24P" secondAttribute="bottom" constant="-56" id="UGI-hq-zhq"/>
                 <constraint firstAttribute="trailing" secondItem="Jav-QH-fpE" secondAttribute="trailing" id="X5v-NQ-gXf"/>
                 <constraint firstItem="kHd-FO-nNM" firstAttribute="leading" secondItem="9Df-qb-l5P" secondAttribute="leading" id="ZJq-hb-qmy"/>
+                <constraint firstItem="rZh-45-Bqy" firstAttribute="top" secondItem="wfQ-N9-24P" secondAttribute="bottom" id="fS3-Ps-LaB"/>
+                <constraint firstItem="rZh-45-Bqy" firstAttribute="leading" secondItem="9Df-qb-l5P" secondAttribute="leading" id="h0H-KK-P7N"/>
+                <constraint firstItem="9Df-qb-l5P" firstAttribute="trailing" secondItem="wfQ-N9-24P" secondAttribute="trailing" id="lsC-yz-to4"/>
                 <constraint firstItem="kHd-FO-nNM" firstAttribute="bottom" secondItem="9Df-qb-l5P" secondAttribute="bottom" id="nNF-B1-xFk"/>
+                <constraint firstItem="rZh-45-Bqy" firstAttribute="trailing" secondItem="9Df-qb-l5P" secondAttribute="trailing" id="oun-3H-Kja"/>
+                <constraint firstItem="wfQ-N9-24P" firstAttribute="leading" secondItem="9Df-qb-l5P" secondAttribute="leading" id="tWO-k1-JnY"/>
                 <constraint firstItem="9Df-qb-l5P" firstAttribute="trailing" secondItem="W0Y-zx-2wA" secondAttribute="trailing" constant="20" id="wDG-ai-bq6"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
@@ -102,6 +168,7 @@
         </view>
     </objects>
     <resources>
+        <image name="btn_findout_more" width="150" height="52"/>
         <image name="icon_plus" width="36" height="36"/>
     </resources>
 </document>
